--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,21 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primaryColor">#e8d4a9</color>
-    <color name="primaryLightColor">#ffffdb</color>
-    <color name="primaryDarkColor">#b5a37a</color>
-    <color name="secondaryColor">#f4db5d</color>
-    <color name="secondaryLightColor">#ffff8e</color>
-    <color name="secondaryDarkColor">#beaa2a</color>
-    <color name="black">#FF000000</color>
 
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="primaryColor">#F44336</color>
+    <color name="primaryLightColor">#FF7961</color>
+    <color name="primaryDarkColor">#BA000D</color>
+    <color name="secondaryColor">#00E676</color>
+    <color name="secondaryLightColor">#66FFA6</color>
+    <color name="secondaryDarkColor">#00B248</color>
+    <color name="background">#F5F5F5</color>
 
-
-
-    <color name="white">#FFFFFFFF</color>
-    <color name="background">#e8d4a9</color>
 </resources>
